--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://gitlab.inria.fr/sibr/sibr_core.git
 [submodule "ever"]
 	path = ever
-	url = https://github.com/google/ever.git
+	url = git@github.com:google/ever.git
